k8s-configs/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emails-analyzer
  name: emails-analyzer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: emails-analyzer
  type: ClusterIP
status:
  loadBalancer: {}
